[tool.poetry]
name = "usernado"
version = "0.3"
description = "Makes it Easy to Manage Tornado Applications"
authors = ["Reganto <tell.reganto@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/reganto/usernado"
documentation = "https://usernado.readthedocs.io/en/latest/"
keywords = ["Tornado", "Python"]
include = ["README.md", "LICENSE.txt"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/reganto/usernado/issues"


[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
tornado-debugger = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
peewee = "^3.14.8"
sqlalchemy = "^1.4.31"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
mypy = "^0.971"
pyproject-flake8 = "^0.0.1-alpha.4"
flake8-bugbear = "^22.7.1"
flake8-broken-line = "^0.4.0"
flake8-comprehensions = "^3.10.0"
pep8-naming = "^0.13.1"
sphinx-rtd-theme = "^1.0.0"
sphinxemoji = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
strict = true

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "F401"]
extend-exclude = [".nox", ".lock", ".toml"]

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310"]
extend-exclude = [".nox", ".lock", ".toml"]


[tool.isort]
profile = "black"
line_length = 99
force_sort_within_sections = true
src_paths = ["usernado/"]
skip_gitignore = true

[tool.coverage.run]
branch = true
