[metadata]
name = usernado
version = attr: usernado.__version__
description = A Tornado boilerplate for human.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/reganto/usernado
author = Reganto
author_email = rreganto@gmail.com
license = Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >= 3.6
install_requires = 
    tornado
    tornado_debugger
packages = find:
include_package_data = true
zip_safe = false
