[metadata]
name = usernado
version = attr: usernado.__version__
author = Reganto
author_email = tell.reganto@gmail.com
description = Usernado is a Tornado Extension to Make Life Easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/reganto/usernado
project_urls =
    Bug Tracker = https://github.com/reganto/usernado/issues
license = Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >= 3.6
install_requires = 
    tornado-debugger >= 0.9.0

packages = find:
include_package_data = True
zip_safe = False
